--- a/Jupyter_notebook_Scripts/01_Data_Cleaning_Preprocessing.ipynb
+++ b/Jupyter_notebook_Scripts/01_Data_Cleaning_Preprocessing.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "# 2. Data type cnoversion\n",
-    "### Since data type are not appropraite for 5 columns as shown above, we need to convert them as belwo. \n",
+    "### Since data type are not appropraite for 5 columns as shown above, we need to convert them as below. \n",
     "- Conver one column (Dt_Customer) to `datetime` type.\n",
     "- Convert three columns (`Education`, \"Marital_Status` and `Country`) into `category` type.\n",
     "- Remove `$` in the begining of values of `Income` column. then, check the data.\n",
